# gdscript-docs-maker

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  generate_reference  generate_reference.bat  generate_reference.sh  setup.cfg  setup.py  windows.bat
.github/workflows/: release.yml
gdscript-docs-maker/: __main__.py
gdscript-docs-maker/modules/: collect_reference.py  command_line.py  config.py  convert_to_markdown.py  gdscript_objects.py
gdscript_docs_maker/: __main__.py
gdscript_docs_maker/modules/: command_line.py  config.py  convert_to_markdown.py  gdscript_objects.py  hugo.py  make_markdown.py  utils.py
godot-scripts/: Collector.gd  CollectorGd4.gd  README.md  ReferenceCollector.gd  ReferenceCollectorCLI.gd  ReferenceCollectorCLIGd4.gd  ReferenceCollectorGd4.gd
src/gdscript_docs_maker/: __main__.py
